Tilt effect added. Minor css + spacing fix.

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,7 +44,8 @@ p {
   bottom: 20%;
   translate: -50% -50%;
   width: 75%;
-  height: 3px; /* Adjust the height as needed */
-  background: linear-gradient(to right, transparent, rgb(255, 255, 255));
-  z-index: -1; /* Ensure it sits behind the text */
+  height: 4px;
+  background: linear-gradient(to right, transparent, black);
+  z-index: -1;
+  border-radius: 10px;
 }
